--- a/CRMProductDownload/Views/Item/Index.cshtml
+++ b/CRMProductDownload/Views/Item/Index.cshtml
@@ -4,48 +4,65 @@
 @using DotNetNuke.Web.Mvc.Helpers
 
 <div id="Items-@Dnn.ModuleContext.ModuleId">
+
     @if (Model.Count() == 0)
     {
         <p>@Dnn.LocalizeString("NoItems")</p>
     }
     else
     {
+        <form asp-action="Item" method="Index">
+            <div class="form-actions no-color">
+                <p>
+                    Filter: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+                    <input type="submit" value="Search" class="btn btn-default" /> |
+                    <a href="@Url.Action("Index", "Item", new { sortOrder = ViewBag.CategorySortParam })">All</a>
+                </p>
+            </div>
+        </form>
         <table class="table table-bordered table-responsive table-hover">
+
             <tr>
-                <th>Name</th>
-                <th>Path</th>
-                <th>Extension</th>
-                <th>Platform</th>
+                <th>
+                    <a href="@Url.Action("Index", "Item", new { sortOrder = ViewBag.CategorySortParam })">@Dnn.LocalizeString("CategorySort")</a>
+                </th>
+                <th>
+                    <a href="@Url.Action("Index", "Item", new { sortOrder = ViewBag.NameSortParam })">@Dnn.LocalizeString("NameSort")</a>
+                </th>
+                <th>
+                    <a href="@Url.Action("Index", "Item", new { sortOrder = ViewBag.VersionSortParam })">@Dnn.LocalizeString("VersionSort")</a>
+                </th>
+                <th>
+                    <a href="@Url.Action("Index", "Item", new { sortOrder = ViewBag.PlatformSortParam })">@Dnn.LocalizeString("PlatformSort")</a>
+                </th>
                 <th>Description</th>
-                <th>Version</th>
-                <th>Expires</th>
                 <th>Download</th>
             </tr>
+
             @foreach (var item in Model)
             {
-            <tr>
-                <td>@item.ItemName</td>
-                <td>@item.ItemPath</td>
-                <td>@item.ItemExtension</td>
-                <td>@item.ItemPlatform</td>
-                <td>@item.ItemDescription</td>
-                <td>@item.ItemVersion</td>
-                <td>@item.ItemAvailable</td>
-                <td>
-                    <a href="@Url.Action("Activate", "Item", new {itemId = item.ItemId})">@Dnn.LocalizeString("DownloadItem")</a>
-                </td>
-                <td>
-                    @{
-                        if (Dnn.ModuleContext.IsEditable)
-                        {
-                            <div>
-                                <a href="@Url.Action("Edit", "Item", new {ctl = "Edit", itemId = item.ItemId})">@Dnn.LocalizeString("EditItem")</a>
-                                <a href="@Url.Action("Delete", "Item", new {itemId = item.ItemId})">@Dnn.LocalizeString("DeleteItem")</a>
-                            </div>
+
+                <tr>
+                    <td>@item.ItemCategory</td>
+                    <td>@item.ItemName</td>
+                    <td>@item.ItemVersion</td>
+                    <td>@item.ItemPlatform</td>
+                    <td>@item.ItemDescription</td>
+                    <td>
+                        <a href="@Url.Action("Activate", "Item", new {itemId = item.ItemId})">@Dnn.LocalizeString("DownloadItem")</a>
+                    </td>
+                    <td>
+                        @{
+                            if (Dnn.ModuleContext.IsEditable)
+                            {
+                                <div>
+                                    <a href="@Url.Action("Edit", "Item", new {ctl = "Edit", itemId = item.ItemId})">@Dnn.LocalizeString("EditItem")</a>
+                                    <a href="@Url.Action("Delete", "Item", new {itemId = item.ItemId})">@Dnn.LocalizeString("DeleteItem")</a>
+                                </div>
+                            }
                         }
-                    }
-                </td>
-            </tr>
+                    </td>
+                </tr>
             }
         </table>
     }
