change all to stage where stage equals non latest non published

--- a/CRMProductDownload/Views/Item/Index.cshtml
+++ b/CRMProductDownload/Views/Item/Index.cshtml
@@ -21,7 +21,7 @@
                     @{
                         if (Dnn.ModuleContext.IsEditable)
                         {
-                            <a href="@Url.Action("Index", "Item", new { viewOrder = ViewBag.AllSortParam })">All</a>
+                            <a href="@Url.Action("Index", "Item", new { viewOrder = ViewBag.AllSortParam })">Staged</a>
                         }
                      }
                     </p>
